--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,44 +3,50 @@ name = "elder-risk"
 version = "0.1.0"
 description = ""
 authors = [{ name = "Mike Hamilton", email = "mike.hamilton7@gmail.com" }]
+requires-python = ">3.12,<3.13"
+license = "MIT"
 readme = "README.md"
-requires-python = ">3.12,<3.14"
 dependencies = [
-    "torch (>=2.8.0,<3.0.0)",
-    "pydantic (>=2.11.7,<3.0.0)",
-    "scikit-learn (>=1.7.1,<2.0.0)",
-    "transformers (>=4.55.0,<5.0.0)",
-    "duckdb (>=1.3.2,<2.0.0)",
-    "pandas (>=2.3.1,<3.0.0)",
-    "numpy (>=2.3.2,<3.0.0)",
-    "seaborn (>=0.13.2,<0.14.0)",
-    "deepeval (>=3.3.6,<4.0.0)",
-    "deepchecks (>=0.19.1,<0.20.0)",
     "jupyterlab (>=4.4.5,<5.0.0)",
-    "great-tables (>=0.18.0,<0.19.0)",
-    "polars (>=1.32.2,<2.0.0)",
-    "statsmodels (>=0.14.5,<0.15.0)",
-    "medspacy (>=1.3.1,<2.0.0)",
-    "spacy (>=3.8.7,<4.0.0)",
-    "rarfile (>=4.2,<5.0)",
-    "loguru (>=0.7.3,<0.8.0)",
-    "patool (>=4.0.1,<5.0.0)",
+    "agno>=1.7.9",
+    "fhir-resources>=8.1.0",
+    "fhir>=0.0.4",
+    "flytekit>=1.16.3",
+    "pyarrow>=21.0.0",
+    "loguru>=0.7.3",
+    "spacy>=3.8.7",
+    "medspacy>=1.3.1",
+    "statsmodels>=0.14.5",
+    "polars>=1.32.2",
+    "pandas>=2.3.1",
+    "numpy>=2.3.2",
+    "deepeval>=3.3.9",
+    "great-tables>=0.18.0",
+    "rarfile>=4.2",
+    "patool>=4.0.1",
+    "scikit-learn>=1.7.1",
+    "pydantic>=2.11.7",
+    "duckdb>=1.3.2",
+    "seaborn>=0.13.2",
+    "transformers>=4.55.0",
 ]
 
-[tool.poetry]
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.4.1"
-ruff = "^0.12.8"
-mypy = "^1.17.1"
-pytest-sugar = "^1.0.0"
-pytest-cov = "^6.2.1"
-pytest-regressions = "^2.8.1"
-pytest-datadir = "^1.8.0"
+[dependency-groups]
+dev = [
+    "deepchecks>=0.19.1",
+    "langwatch-scenario>=0.7.8",
+    "mypy>=1.17.1",
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+    "pytest-datadir>=1.8.0",
+    "pytest-regressions>=2.8.1",
+    "pytest-sugar>=1.0.0",
+    "ruff>=0.12.8",
+]
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.ruff]
 exclude = [".venv"]
